# mcp_test

./: .gitignore
repo-intel-bundle-v2/: .env  .env.example  01.md  DEMO_COPILOT.md  Makefile  README.md  RUN_LOCAL.md  debug_ui_data.py  pyproject.toml  setup.py  verify_output.txt
repo-intel-bundle-v2/.venv_312/: pyvenv.cfg
repo-intel-bundle-v2/agents/: agile_planner_agent.py  effort_estimator_agent.py  execution_roadmap_agent.py  integrator_agent.py  test_coverage_agent.py  vulnerability_agent.py
repo-intel-bundle-v2/contracts/: repository_analysis.schema.json
repo-intel-bundle-v2/docs/: architecture.md  confluence-seller-mode.md  copilot_mcp_setup.md  copilot_orchestrator_playbook.md  copilot_workflow.md  limitations.md  mcp_architecture.md  mcp_tools.md  operations-runbook.md  report-format.md  skills-overview.md  ui-status-dashboard.md  workflows.md
repo-intel-bundle-v2/examples/: custom_workflow.md  repos_list.sample.json
repo-intel-bundle-v2/orchestrator/: confluence_publisher.py  event_bus.py  mcp_audit_tools.py  mcp_server.py  mcp_tools.py  pipeline.py  server.py  server_stdio.py  tool_registry.py  workflow.py
repo-intel-bundle-v2/scripts/: run_orchestrator.py  run_sample_project.py  run_ui.py  start_mcp_server.py  test_mcp_connection.py  test_mcp_stdio.py  verify_mcp_audit.py
repo-intel-bundle-v2/seller_mode/: seller_formatter.py
repo-intel-bundle-v2/skills/: confluence_publisher_skill.md  integrator_governance_agent.md  seller_mode_skill.md  test_coverage_agent.md  vulnerability_detective_agent.md
repo-intel-bundle-v2/src/: analyzer.py  (+6 more)
(+83 files in other folders)
